# tethysdash_examples

./: LICENSE  README.md  pyproject.toml
dashboard_examples/: Great Lakes Water levels.json  Map and Text Updates.json  NYC Car Theft Stats Viewer.json  RFC Max Stage Analysis.json  Water Manager.json  Wildfire Visualizer.json  Yuba_Feather Forecasting.json
plugin_examples/nyc_car_theft/: borough_extents.json  chart.py  map.py  utilities.py
plugin_examples/tutorials/: geoglows_plot.py
plugin_examples/wildfire_visualizer/: country_extents.json  map.py
tethysdash_plugin_template/: card_example.py  image_example.py  machine_learning.py  map_example.py  map_geometry.py  map_geometry_layer.py  map_layer_example.py  plot_example.py  table_example.py  text_example.py  variable_input_example.py
tethysdash_plugin_template.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
